# AudioPlayerWithEqualizer

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/patriciocds/audioplayerequalizer/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/patriciocds/audioplayerequalizer/util/: AudioEqualizerInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/patriciocds/audioplayerequalizer/: PlaybackCallback.aidl  PlaybackInterface.aidl
app/src/main/cpp/: AudioEqualizer.cpp  CMakeLists.txt
app/src/main/java/com/patriciocds/audioplayerequalizer/service/: AudioService.java  MusicData.java
app/src/main/java/com/patriciocds/audioplayerequalizer/ui/: BaseActivity.java  MainActivity.java
app/src/main/java/com/patriciocds/audioplayerequalizer/util/: AudioEqualizer.java  ExceptionUtils.java  Playback.java  PlaybackUtils.java
app/src/main/res/layout/: activity_main.xml  notification_player.xml
app/src/main/res/raw/: music_dataset.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/patriciocds/audioplayerequalizer/: ExampleUnitTest.java
app/src/test/java/com/patriciocds/audioplayerequalizer/service/: AudioServiceTest.java
gradle/wrapper/: gradle-wrapper.properties
